--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.freemarker.suffix=.html
-spring.datasource.url=jdbc:mysql://localhost:3306/newcoder?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/wenda?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123456
 mybatis.config-location=classpath:mybatis-config.xml
