--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.13</version>
 		</dependency>
+
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.8.0</version>
+		</dependency>
     </dependencies>
 
 	<build>
