--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,16 @@
 			<artifactId>jedis</artifactId>
 			<version>2.8.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-email</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
 
 	<build>
